# fatos_hist_bot

./: .coverage  .gitignore  .pylintrc  Dockerfile  README.md  bot.conf  claude.md  main.py  pyproject.toml  sample.bot.conf
.claude/: settings.local.json
.github/workflows/: pipeline.yaml
fatoshist/: README.md  __init__.py  bot.py  config.py  loggers.py  main.py  scheduled.py  scripts.py  version.py
fatoshist/assets/: README.md
fatoshist/bot/: bot.py
fatoshist/commands/: admin.py  fotoshist.py  help.py  send.py  start.py  sudo.py
fatoshist/core/: README.md  poll_channel.py  poll_chats.py
fatoshist/data/: README.md  civilizacoes.json  curiosidade.json  dados.md  descobertas.json  guerras.json  historia.json  holidayBr.json  inventores.json  mulheres_historicas.json  perguntas.json  perguntas_10.json  presidentes.json  viloes.json
fatoshist/database/: README.md  counter_manager.py  db_connection.py  groups.py  imgs.py  poll_manager.py  president_manager.py  users.py
fatoshist/handlers/: README.md  ads.py  birth_of_day.py  boots.py  channel_creation_message.py  christmas_message.py  count_user_channel.py  curiosity_channel.py  death_of_day.py  event_hist_channel.py  event_hist_chats.py  event_hist_users.py  event_img_chn.py  follow_channels.py  historys.py  holiday.py  holiday_brazil.py  image_hist_events_channel.py  image_hist_events_chat.py  new_year_message.py  poll_channel.py  poll_chats.py  prase_channel.py  presidents.py  stars.py
fatoshist/handlers/callback_handlers/: __init__.py
fatoshist/handlers/chat_handlers/: __init__.py
fatoshist/handlers/commands_handlers/: __init__.py  admin.py  fotoshist.py  send.py  sudo.py  user.py
fatoshist/scheduled/: scripts.py
fatoshist/utils/: README.md  anti_spam.py  get_historical.py  month.py  post_tracker.py  sudo.py  welcome.py
tests/: test_bot.py  test_curiosidade.py  test_database.py  test_events.py  test_frase.py  test_historia.py  test_holiday_br.py  test_main.py  test_poll.py  test_presidentes.py
(+31 files in other folders)
