[tool.poetry]
name = "fatoshist"
version = "0.1.0"
description = ""
authors = ["leviobrabo <carlosjunior20313@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pytelegrambotapi = "^4.22.1"
schedule = "^1.2.2"
pymongo = "^4.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.4"
black = "^24.8.0"

[tool.black]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fatoshistbot dev fatoshist/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fatoshist -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
